# vidown

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: build.yml  codeql.yml  lint.yml  release.yml
configs/: config.default.json  config.example.yaml
docs/: ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  FAQ.md  PUBLISH_TO_GITHUB.md
scripts/: README.md  build.py  clean.sh  install.bat  install.sh  vidown.spec  vidown_entry.py
scripts/pyinstaller_hooks/: hook-browser_cookie3.py  hook-m3u8.py  hook-vidown.py  hook-yt_dlp.py  runtime_hook.py
tests/: __init__.py  test_cli.py  test_compatibility.py  test_config.py  test_dash_engine.py  test_data.py  test_exceptions.py  test_fallback_engines.py  test_format_selector.py  test_m3u8_engine.py  test_network.py  test_path_utils.py  test_performance.py  test_platform_detect.py  test_retry.py  test_rtmp_engine.py  test_scheduler.py  test_utils.py
vidown/: __init__.py  __main__.py  compat.py
vidown/cli/: __init__.py  main.py
vidown/core/: __init__.py  config.py  exceptions.py  format_selector.py  logger.py  models.py  network.py  path_utils.py  platform_detect.py  retry.py  scheduler.py  utils.py
vidown/data/: __init__.py  cookie_store.py  database.py  history.py
vidown/engines/: __init__.py  base.py  dash_downloader.py  dash_engine.py  dash_probe.py  direct_engine.py  fallback_engines.py  m3u8_engine.py  m3u8_external.py  m3u8_internal.py  m3u8_probe.py  rtmp_engine.py  ytdlp_engine.py
vidown/gui/: __init__.py  __main__.py  server.py
vidown/gui/static/: app.js  style.css
vidown/gui/templates/: index.html
vidown/postprocess/: __init__.py  ffmpeg_pipe.py  probe.py
vidown/utils/: __init__.py  clipboard.py  download_enhancer.py  system.py
