[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidown"
version = "0.2.0"
description = "通用视频下载器 —— 类 Downie4 的全能流媒体下载工具"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vidown Contributors" }]
keywords = ["video", "downloader", "ytdlp", "m3u8", "hls", "dash", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.5.22",
    "requests>=2.32.0",
    "m3u8>=6.0.0",
    "beautifulsoup4>=4.12.3",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
cookies = ["browser-cookie3>=0.19.0"]
fallback = ["you-get>=0.4.1655"]
async = ["aiohttp>=3.9.0", "httpx>=0.27.0"]
headless = ["playwright>=1.42.0", "selenium>=4.18.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyinstaller>=6.5.0",
    "responses>=0.25.0",
    "aioresponses>=0.7.6",
]
all = [
    "browser-cookie3>=0.19.0",
    "you-get>=0.4.1655",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "playwright>=1.42.0",
    "selenium>=4.18.0",
]

[project.scripts]
vidown = "vidown.cli:main"

[project.urls]
Homepage = "https://github.com/vidown/vidown"
Documentation = "https://github.com/vidown/vidown/wiki"
Issues = "https://github.com/vidown/vidown/issues"

[tool.setuptools.packages.find]
include = ["vidown*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
"vidown.gui" = ["templates/*.html", "static/*"]
"vidown" = ["../configs/*.json", "../configs/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
